More grammar. Refining documentation